[tool.poetry]
name = "ankidmpy"
version = "0.1.0"
description = "Python port of github.com/OnkelTem/anki-dm"
authors = ["Douglas Mennella <douglas.mennella@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
anki-dm ="ankidmpy:main"